--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "angular": "^1.6.6",
     "angular-cookies": "^1.6.6",
     "angular-bootstrap": "^2.5.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "angular-ui-grid": "^4.0.7"
   }
 }
