--- a/bower.json
+++ b/bower.json
@@ -23,5 +23,8 @@
     "angular-cookies": "^1.6.6",
     "angular-bootstrap": "^2.5.0",
     "underscore": "^1.8.3"
+  },
+  "resolutions": {
+    "angular": "1.6.6"
   }
 }
