--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
     "angular": "^1.6.6",
     "angular-cookies": "^1.6.6",
     "angular-bootstrap": "^2.5.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "angular-ui-notification": "^0.3.6"
   },
   "resolutions": {
     "angular": "1.6.6"
