--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "angular-cookies": "^1.6.6",
     "angular-bootstrap": "^2.5.0",
     "underscore": "^1.8.3",
-    "angular-ui-notification": "^0.3.6"
+    "angular-ui-notification": "^0.3.6",
+    "angular-ui-grid": "^4.0.7"
   },
   "resolutions": {
     "angular": "1.6.6"
