--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "jsonwebtoken": "^8.1.0",
     "mongoose": "^4.12.4",
     "morgan": "^1.9.0",
-    "underscore": "^1.8.3",
-    "winston": "^3.0.0-rc1"
+    "underscore": "^1.8.3"
   }
 }
