--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.0",
+    "moment": "^2.19.1",
     "mongoose": "^4.12.4",
     "morgan": "^1.9.0",
     "underscore": "^1.8.3",
