--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.19.1",
     "mongoose": "^4.12.4",
     "morgan": "^1.9.0",
+    "ng-table": "^3.0.1",
     "underscore": "^1.8.3",
     "winston": "^3.0.0-rc1"
   }
