--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^4.12.4",
     "morgan": "^1.9.0",
     "ng-table": "^3.0.1",
+    "nodemailer": "^4.3.1",
     "underscore": "^1.8.3",
     "winston": "^3.0.0-rc1"
   }
