--- a/server/config/config.json
+++ b/server/config/config.json
@@ -5,8 +5,15 @@
       "expiresIn": 86400
     }
   },
-  "mongo":{
+  "mongo": {
     "url": "mongodb://localhost/easygaadi"
   },
-  "port": 3000
+  "port": 3000,
+  "mysql": {
+    "connectionLimit": 10,
+    "host": "eggps.cloudapp.net",
+    "user": "root",
+    "password": "098ioplkjbNm",
+    "database": "gts"
+  }
 }
