--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ng-table": "^3.0.1",
     "nodemailer": "^4.3.1",
     "underscore": "^1.8.3",
+    "velocityjs": "^0.10.0",
     "winston": "^3.0.0-rc1"
   }
 }
