--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.19.1",
     "mongoose": "^4.12.4",
     "morgan": "^1.9.0",
+    "mysql": "^2.15.0",
     "ng-table": "^3.0.1",
     "nodemailer": "^4.3.1",
     "underscore": "^1.8.3",
