--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.0",
+    "log4js": "^2.3.11",
     "moment": "^2.19.1",
     "mongoose": "^4.12.4",
     "morgan": "^1.9.0",
     "mysql": "^2.15.0",
     "ng-table": "^3.0.1",
-    "nodemailer": "^4.3.1",
+    "nodemailer": "^4.4.0",
     "underscore": "^1.8.3",
     "velocityjs": "^0.10.0",
     "winston": "^3.0.0-rc1"
