--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemailer": "^4.4.0",
     "underscore": "^1.8.3",
     "velocityjs": "^0.10.0",
-    "winston": "^3.0.0-rc1"
+    "winston": "^3.0.0-rc1",
+    "xlsx": "^0.11.9"
   }
 }
