--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "moment": "^2.19.1",
     "mongoose": "^4.12.4",
     "morgan": "^1.9.0",
+    "msg91": "0.0.6",
     "mysql": "^2.15.0",
     "ng-table": "^3.0.1",
     "nodemailer": "^4.4.0",
+    "otp-generator": "^1.1.0",
     "underscore": "^1.8.3",
     "velocityjs": "^0.10.0",
     "winston": "^3.0.0-rc1",
