--- a/server/config/config.json
+++ b/server/config/config.json
@@ -11,21 +11,16 @@
   "port": 2000,
   "mysql": {
     "connectionLimit": 10,
-    //"host": "eggps.cloudapp.net",
     "host": "localhost",
     "user": "root",
-    //"password": "098ioplkjbNm",
-    "password": "root",
+    "password": "",
     "database": "gts"
   },
   "mysql_crm": {
-    //"port": 6102,
     "connectionLimit": 100,
-    //"host": "egcrm.cloudapp.net",
     "host": "localhost",
     "user": "root",
-    //"password": "098ioplkjbNm",
-    "password": "root",
+    "password": "",
     "database": "easygaadi_crm"
   },
   "msg91": {
