--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,8 @@
     "underscore": "^1.8.3",
     "angular-ui-notification": "^0.3.6",
     "angular-ui-grid": "^4.0.7",
-    "font-awesome": "^4.7.0"
+    "font-awesome": "^4.7.0",
+    "sweetalert2": "^7.1.2"
   },
   "resolutions": {
     "angular": "1.6.6"
