--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "async": "^2.5.0",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
+    "download-file": "^0.1.5",
     "express": "^4.16.2",
+    "json2xls": "^0.1.2",
     "jsonwebtoken": "^8.1.0",
     "log4js": "^2.3.11",
     "moment": "^2.19.1",
