--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,9 @@
     "underscore": "^1.8.3",
     "angular-ui-notification": "^0.3.6",
     "font-awesome": "^4.7.0",
-    "sweetalert2": "^7.1.2"
+    "sweetalert2": "^7.1.2",
+    "ng-file-upload": "^12.2.13",
+    "ng-img-crop": "^0.3.2"
   },
   "resolutions": {
     "angular": "1.6.6"
