--- a/server/config/config.json
+++ b/server/config/config.json
@@ -10,6 +10,7 @@
   },
   "port": 3000,
   "mysql": {
+    "port": 3306,
     "connectionLimit": 100,
     "host": "localhost",
     "user": "root",
@@ -17,6 +18,7 @@
     "database": "gts"
   },
   "mysql_crm": {
+    "port": 3306,
     "connectionLimit": 100,
     "host": "localhost",
     "user": "root",
