--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,8 @@
     "font-awesome": "^4.7.0",
     "sweetalert2": "^7.1.2",
     "ng-file-upload": "^12.2.13",
-    "ng-img-crop": "^0.3.2"
+    "ng-img-crop": "^0.3.2",
+    "angular-ui-select": "^0.19.8"
   },
   "resolutions": {
     "angular": "1.6.6"
