--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "msg91": "0.0.6",
     "mysql": "^2.15.0",
     "ng-table": "^3.1.0",
+    "node-geocoder": "^3.21.1",
     "nodemailer": "^4.4.1",
     "nodemon": "^1.14.3",
     "otp-generator": "^1.1.0",
+    "passport": "^0.4.0",
+    "passport-google-oauth2": "^0.1.6",
     "underscore": "^1.8.3",
     "velocityjs": "^0.10.0",
     "winston": "^3.0.0-rc1",
