--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "otp-generator": "^1.1.0",
     "passport": "^0.4.0",
     "passport-google-oauth2": "^0.1.6",
+    "ua-parser-js": "^0.7.17",
     "underscore": "^1.8.3",
     "velocityjs": "^0.10.0",
     "winston": "^3.0.0-rc1",
