--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "msg91": "0.0.6",
     "mysql": "^2.15.0",
     "ng-table": "^3.1.0",
+    "node-cron": "^1.2.1",
     "node-geocoder": "^3.21.1",
     "nodemailer": "^4.4.1",
     "nodemon": "^1.14.3",
