--- a/server/config/config.json
+++ b/server/config/config.json
@@ -12,17 +12,17 @@
   "mysql": {
     "port": 3306,
     "connectionLimit": 100,
-    "host": "localhost",
+    "host": "eggps.cloudapp.net",
     "user": "root",
-    "password": "",
+    "password": "098ioplkjbNm",
     "database": "gts"
   },
   "mysql_crm": {
-    "port": 3306,
+    "port": 6102,
     "connectionLimit": 100,
-    "host": "localhost",
+    "host": "egcrm.cloudapp.net",
     "user": "root",
-    "password": "",
+    "password": "098ioplkjbNm",
     "database": "easygaadi_crm"
   },
   "msg91": {
