--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,11 @@
     "sweetalert2": "^7.1.2",
     "ng-file-upload": "^12.2.13",
     "ng-img-crop": "^0.3.2",
-    "angular-ui-select": "^0.19.8"
+    "angular-ui-select": "^0.19.8",
+    "datatables.net": "^1.10.16",
+    "datatables.net-dt": "^3.2.2",
+    "datatables.net-responsive": "^2.2.0",
+    "datatables.net-responsive-dt": "^2.2.0"
   },
   "resolutions": {
     "angular": "1.6.6"
