--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "passport-google-oauth2": "^0.1.6",
     "ua-parser-js": "^0.7.17",
     "underscore": "^1.8.3",
+    "uuid": "^3.2.1",
     "velocityjs": "^0.10.0",
     "winston": "^3.0.0-rc1",
     "xlsx": "^0.11.15"
