--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "main": "server.js",
   "scripts": {
     "start": "SET NODE_ENV=dev && node server.js",
-    "test": "mocha --timeout 10000"
+    "test": "mocha --timeout 10000",
+    "runDev": "gulp & node server.js",
+    "runProd": "gulp run & node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "async": "^2.5.0",
     "body-parser": "^1.18.2",
+    "child_process": "^1.0.2",
     "cookie-parser": "^1.4.3",
     "download-file": "^0.1.5",
     "express": "^4.16.2",
@@ -47,6 +50,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-html-replace": "^1.6.2",
     "gulp-minify-css": "^1.2.4",
+    "gulp-sequence": "^1.0.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.0",
     "gulp-uglify-es": "^1.0.0",
