--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     "msg91": "0.0.6",
     "mysql": "^2.15.0",
     "ng-table": "^3.1.0",
+    "nginx": "0.0.0",
     "node-cron": "^1.2.1",
     "node-geocoder": "^3.21.1",
     "nodemailer": "^4.4.1",
-    "nodemon": "^1.14.3",
+    "nodemon": "^1.14.12",
     "otp-generator": "^1.1.0",
     "passport": "^0.4.0",
     "passport-google-oauth2": "^0.1.6",
