--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "async": "^2.5.0",
     "body-parser": "^1.18.2",
     "child_process": "^1.0.2",
+    "connect-multiparty": "^2.1.0",
     "cookie-parser": "^1.4.3",
     "download-file": "^0.1.5",
     "express": "^4.16.2",
+    "fs-extra": "^5.0.0",
     "gulp-rename": "^1.2.2",
     "json2xls": "^0.1.2",
     "jsonwebtoken": "^8.1.0",
