--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-rename": "^1.2.2",
     "json2xls": "^0.1.2",
     "jsonwebtoken": "^8.1.0",
+    "kafka-node": "^2.4.1",
     "log4js": "^2.3.11",
     "merge-stream": "^1.0.1",
     "moment": "^2.20.1",
