--- a/server/config/config.json
+++ b/server/config/config.json
@@ -46,5 +46,6 @@
   },
   "bodyParserLimit": "50mb",
   "googleSecretKeyLimit": 3,
-  "devicePositionsArchiveLimit": 14
+  "devicePositionsArchiveLimit": 14,
+  "devicePositionsTopicName": ""
 }
