--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "download-file": "^0.1.5",
     "express": "^4.16.2",
     "fs-extra": "^5.0.0",
+    "googlemaps": "^1.12.0",
     "gulp-rename": "^1.2.2",
     "json2xls": "^0.1.2",
     "jsonwebtoken": "^8.1.0",
