--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,7 @@
   ],
   "dependencies": {
     "bootstrap": "^3.3.7",
-      "angular-ui-router": "^1.0.6",
+    "angular-ui-router": "^1.0.6",
     "angular": "^1.6.6",
     "angular-cookies": "^1.6.6",
     "angular-bootstrap": "^2.5.0",
@@ -33,7 +33,8 @@
     "datatables.net-dt": "^3.2.2",
     "datatables.net-responsive": "^2.2.0",
     "datatables.net-responsive-dt": "^2.2.0",
-    "angularjs-dropdown-multiselect": "^1.11.8"
+    "angularjs-dropdown-multiselect": "^1.11.8",
+    "lightbox2": "lightbox#^2.10.0"
   },
   "resolutions": {
     "angular": "1.6.6"
