--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cookie-parser": "^1.4.3",
     "download-file": "^0.1.5",
     "express": "^4.16.2",
+    "fcm-push": "^1.1.3",
     "fs-extra": "^5.0.0",
     "googlemaps": "^1.12.0",
     "gulp-rename": "^1.2.2",
