--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^6.2.1",
     "async": "^2.5.0",
+    "base-64": "^0.1.0",
     "body-parser": "^1.18.2",
     "child_process": "^1.0.2",
     "connect-multiparty": "^2.1.0",
@@ -23,6 +25,7 @@
     "fs-extra": "^5.0.0",
     "googlemaps": "^1.12.0",
     "gulp-rename": "^1.2.2",
+    "json2csv": "^3.11.2",
     "json2xls": "^0.1.2",
     "jsonwebtoken": "^8.1.0",
     "kafka-node": "^2.4.1",
@@ -42,6 +45,8 @@
     "otp-generator": "^1.1.0",
     "passport": "^0.4.0",
     "passport-google-oauth2": "^0.1.6",
+    "sendgrid": "^5.2.3",
+    "sendgrid-rest": "^2.4.0",
     "ua-parser-js": "^0.7.17",
     "underscore": "^1.8.3",
     "uuid": "^3.2.1",
