--- a/bower.json
+++ b/bower.json
@@ -35,7 +35,8 @@
     "datatables.net-responsive-dt": "^2.2.0",
     "angularjs-dropdown-multiselect": "^1.11.8",
     "lightbox2": "lightbox#^2.10.0",
-    "ngmap": "^1.18.4"
+    "ngmap": "^1.18.4",
+    "bootstrap-ui-datetime-picker": "^2.6.3"
   },
   "resolutions": {
     "angular": "1.6.6"
