--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@sendgrid/mail": "^6.2.1",
     "async": "^2.5.0",
+    "aws-sdk": "^2.233.1",
     "base-64": "^0.1.0",
     "body-parser": "^1.18.2",
     "child_process": "^1.0.2",
