--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "angular-ui-router": "^1.0.6",
-    "angular": "^1.6.6",
+    "angular": "^1.4.14",
     "angular-cookies": "^1.6.6",
     "angular-bootstrap": "^2.5.0",
     "underscore": "^1.8.3",
@@ -36,9 +36,10 @@
     "angularjs-dropdown-multiselect": "^1.11.8",
     "lightbox2": "lightbox#^2.10.0",
     "ngmap": "^1.18.4",
-    "bootstrap-ui-datetime-picker": "^2.6.3"
+    "bootstrap-ui-datetime-picker": "^2.6.3",
+    "angular-sanitize": "^1.7.0"
   },
   "resolutions": {
-    "angular": "1.6.6"
+    "angular": "^1.4.14"
   }
 }
