--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mongoose": "^4.13.12",
     "morgan": "^1.9.0",
     "msg91": "0.0.6",
+    "multer": "^1.3.0",
     "mysql": "^2.15.0",
     "ng-table": "^3.1.0",
     "nginx": "0.0.0",
