share tracking completed

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "async": "^2.5.0",
     "aws-sdk": "^2.233.1",
     "base-64": "^0.1.0",
+    "bitly": "^6.0.7",
     "body-parser": "^1.18.2",
     "child_process": "^1.0.2",
     "connect-multiparty": "^2.1.0",
@@ -48,6 +49,7 @@
     "passport-google-oauth2": "^0.1.6",
     "sendgrid": "^5.2.3",
     "sendgrid-rest": "^2.4.0",
+    "short-url": "0.0.1",
     "ua-parser-js": "^0.7.17",
     "underscore": "^1.8.3",
     "uuid": "^3.2.1",
