--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.16.3",
     "fcm-push": "^1.1.3",
     "fs-extra": "^5.0.0",
+    "google-url": "0.0.4",
     "googlemaps": "^1.12.0",
     "gulp-rename": "^1.2.2",
     "json2csv": "^3.11.2",
@@ -49,7 +50,6 @@
     "passport-google-oauth2": "^0.1.6",
     "sendgrid": "^5.2.3",
     "sendgrid-rest": "^2.4.0",
-    "short-url": "0.0.1",
     "ua-parser-js": "^0.7.17",
     "underscore": "^1.8.3",
     "uuid": "^3.2.1",
