--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "connect-multiparty": "^2.1.0",
     "cookie-parser": "^1.4.3",
     "download-file": "^0.1.5",
+    "dynamic-html-pdf": "0.0.4",
     "express": "^4.16.3",
     "fcm-push": "^1.1.3",
     "fs-extra": "^5.0.0",
