--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "google-url": "0.0.4",
     "googlemaps": "^1.12.0",
     "gulp-rename": "^1.2.2",
+    "jshint": "^2.9.6",
     "json2csv": "^3.11.2",
     "json2xls": "^0.1.2",
     "jsonwebtoken": "^8.2.1",
