--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "gulp-uglify": "^3.0.0",
     "gulp-uglify-es": "^1.0.1",
     "gulp-usemin": "^0.3.29",
+    "gulp-watch": "^5.0.1",
     "install-peers": "^1.0.2",
     "mocha": "^4.1.0"
   },
