--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "node-geocoder": "^3.22.0",
     "nodemailer": "^4.6.4",
     "nodemon": "^1.17.3",
+    "number-to-words": "^1.2.4",
     "otp-generator": "^1.1.0",
     "passport": "^0.4.0",
     "passport-google-oauth2": "^0.1.6",
